--- a/dialog1.ui
+++ b/dialog1.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>125</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Training</string>
   </property>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
@@ -31,8 +31,8 @@
     <rect>
      <x>10</x>
      <y>60</y>
-     <width>221</width>
-     <height>51</height>
+     <width>200</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="font">
