--- a/dialog1.ui
+++ b/dialog1.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>125</height>
+    <height>400</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,9 +30,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>60</y>
-     <width>200</width>
-     <height>50</height>
+     <y>50</y>
+     <width>381</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -40,6 +40,9 @@
      <family>Microsoft Sans Serif</family>
      <pointsize>12</pointsize>
     </font>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::Box</enum>
    </property>
    <property name="text">
     <string/>
@@ -52,6 +55,16 @@
      <y>20</y>
      <width>221</width>
      <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="plainTextEdit">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>90</y>
+     <width>381</width>
+     <height>301</height>
     </rect>
    </property>
   </widget>
